--- a/index.html
+++ b/index.html
@@ -1,91 +1,175 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+<head>
+	<title>企业网站</title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<script src="js/setHomeSetFav.js" type="text/javascript" charset="gb2312"></script>
+	<script src="js/myfocus-2.0.1.min.js" type="text/javascript"></script>
+	<script src="js/mf-pattern/mF_fancy.js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="js/mf-pattern/mF_fancy.css">
+	<script type="text/javascript">
+		myFocus.set({id:'pic_box'})
+	</script>
+</head>
+<body>
+<div class='top'>
+     <div class="top_content">
+     	<ul>
+     		<li><a href="#">联系我们</a></li>
+     		<li><a href="#" onclick="AddFavorite(window.lacation,document.title)">加入收藏</a></li>
+     		<li><a href="#" onclick="SetHome(window.lacation)">设为首页</a></li>
+     	</ul>
+     </div>
+</div><!-- top 结束 -->
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+<div class="wrap">
+	<div class="logo">
+		<div class="logo_left">
+			<img src="images/logo.jpg" alt="慕课网"/>
+		</div>
+		<div class="logo_right">
+			<img src="images/tel.jpg" alt="服务热线">24小时服务热线：<span class="tel">123-456-7890</span>
+		</div>
+	</div> <!-- logo结束 -->
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Small-demo by Echoting</title>
-  </head>
+    <div class="nav">
+    	<div class="nav_left">
+    		
+    	</div>
+    	<div class="nav_mid">
+    		<div class="nav_mid_left">
+    			<ul>
+    				<li><a href="index.html">首    页</a></li>
+    				<li><a href="list.html">关于慕课</a></li>
+    				<li><a href="list.html">新闻动态</a></li>
+    				<li><a href="list.html">课程中心</a></li>
+    				<li><a href="list.html">在线课程</a></li>
+    				<li><a href="list.html">人才招聘</a></li>
+    			</ul>
+    		</div>
+    		<div class="nav_mid_right">
+    			<form action="" method="post">
+    				<input type="test" class="search_text" />
+    			</form>
+    		</div>
+    	</div>
+    	<div class="nav_right"></div>
+    </div><!-- nav结束 -->
 
-  <body>
-    <a id="forkme_banner" href="https://github.com/Echoting/small-demo">View on GitHub</a>
-    <div class="shell">
-
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Small-demo</h1>
-            <h2>imooc</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
-
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/Echoting/small-demo/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/Echoting/small-demo/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/Echoting">Echoting</a> can be found on <a href="https://github.com/Echoting/small-demo">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
+    <div class="ad" id="pic_box">
+        <div class="loading"><img src="images/loading.gif" alt="图片加载中"></div>
+        <div class="pic">  <!-- myfocus插件必须用一个类名为pic的div包裹图片 -->
+    	    <ul>
+    		    <li><img src="images/ad2.jpg" ></li>
+    		    <li><img src="images/ad3.jpg" ></li>
+    		    <li><img src="images/ad4.jpg" ></li>
+    	    </ul>
+        </div>
     </div>
 
-    
-  </body>
+    <div class="main">
+    	<div class="news">
+    		<div class="title">
+    			<h2 class="title_left">新闻中心</h2><span class="title_right"><a href="news.html">More&gt&gt</a></span>
+    		</div>
+    		<div class="pic_news">
+    			<img src="images/news.jpg"><h2><a href="news.html">520 慕女神喊你来表白</a></h2>
+    			<p>
+    				5月20-5月25<br/>获奖公布时间：5月26<br/><a href="news.html">Learn More&gt&gt</a>
+    			</p>
+    		</div>
+    		<div class="news_list">
+    			<ul>
+    				<li><a href="news.html">【慕课访谈 用户篇】“有为屌丝”在路上</a><span>2014-06-01</span></li>
+    				<li><a href="news.html">【有奖活动】 给父亲的三行书信</a><span>2014-06-01</span></li>
+    				<li><a href="news.html">《程序猿，请晒出你的获奖通告》</a><span>2014-06-21</span></li>
+    				<li><a href="news.html">【慕课访谈】 破茧成蝶---美女程熙媛的蜕变史</a><span>2014-05-11</span></li>
+    			</ul>
+    		</div>
+    	</div>
+    	<div class="course">
+    		<div class="title">
+    			<h2 class="title_left">课程中心</h2><span class="title_right"><a href="news.html">More&gt&gt</a></span>
+    		</div>
+    		<div class="course_pic">
+    			<img src="images/css.jpg"><h2><a href="news.html">CSS 圆角进化论</a></h2>
+    			<p>
+    				CSS圆角的实现，经历了以下阶段：背景图片方式，CSS2.0+HTML 标签模式，CSS3.0圆角属性。本案例讲解了每一种的实现方法，对实现的优缺点进行对比分析。
+    			</p>
+    		</div>
+    		<div class="course_type">
+    			<ul>
+    				<li>JAVA 开发</li>
+    				<li>前端开发</li>
+    				<li>Android开发</li>
+    			</ul>
+    		</div>
+    	</div>
+    	<div class="sidebar">
+    		<div class="vedio">
+    			<div class="title">
+    			    <h2 class="title_left">媒体聚焦</h2><span class="title_right"><a href="news.html">More&gt&gt</a></span>
+    			</div>
+    			<div class="vedio_content">
+    				<embed src="http://player.youku.com/player.php/sid/XMTUzODU3NDU1Ng==/v.swf" allowFullScreen="true" quality="high" width="220" height="140" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash">
+    				</embed>
+    			</div>
+    		</div>
+    		<div class="sidebar_ad">
+    			<img src="images/app.jpg" />
+    		</div>
+    	</div>
+    </div>
+
+</div><!-- wrap 结束 -->
+
+<div class="copyright">
+	<div class="copyright_content">
+		<ul>
+			<li><a href="#">关于</a>
+			    <ul>
+			    	<li><a href="#">品牌故事</a></li>
+			    	<li><a href="#">联系我们</a></li>
+			    	<li><a href="#">加入我们</a></li>
+			    	<li><a href="#">版权声明</a></li>
+			    </ul>
+			</li>
+			<li><a href="#">课程</a>
+			    <ul>
+			    	<li><a href="#">前端学习</a></li>
+			    	<li><a href="#">JAVA课程</a></li>
+			    	<li><a href="#">Android课程</a></li>
+			    	<li><a href="#">PHP课程</a></li>
+			    </ul>
+			</li>
+			<li><a href="#">留言</a>
+                <ul>
+			    	<li><a href="#">新浪微博</a></li>
+			    	<li><a href="#">腾讯微博</a></li>
+			    	<li><a href="#">QQ空间</a></li>
+			    	<li><a href="#">微信留言</a></li>
+			    </ul>
+			</li>
+			<li><a href="#">关注</a>
+			    <ul>
+			    	<li><a href="#">意见反馈</a></li>
+			    	<li><a href="#">问题留言</a></li>
+			    	<li><a href="#">媒体联络</a></li>
+			    	<li><a href="#">在线客服</a></li>
+			    </ul>
+			</li>
+			<li><a href="#"><img src="images/weixin.png"/>微信关注</a>
+			    <ul>
+			    	<li>
+			    		<img src="images/qrcode.jpg" />
+			    	</li>
+			    </ul>
+			</li>
+		</ul>
+	</div>
+</div>
+
+
+</body>
 </html>
